--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,17 @@
-certifi==2019.9.11
-cffi==1.13.1
+certifi==2019.11.28
+cffi==1.13.2
 chardet==3.0.4
 cryptography==2.8
 future==0.18.2
 idna==2.8
+numpy==1.17.4
+pandas==0.25.3
 pycparser==2.19
+python-dateutil==2.8.1
 python-telegram-bot==12.2.0
+pytz==2019.3
 requests==2.22.0
-six==1.12.0
-TextToOwO==2.0.1
+six==1.13.0
 tornado==6.0.3
-urllib3==1.25.6
+urllib3==1.25.7
+xlrd==1.2.0
